[Diagnostics] SR-2484: Improve diagnostic for incorrectly called private init